@@ -99,9 +99,6 @@ public class StressCQLSSTableWriter implements Closeable
     static
     {
         DatabaseDescriptor.clientInitialization(false);
-        // Partitioner is not set in client mode.
-        if (DatabaseDescriptor.getPartitioner() == null)
-            DatabaseDescriptor.setPartitionerUnsafe(Murmur3Partitioner.instance);
     }
 
     private final AbstractSSTableSimpleWriter writer;
