@@ -1,4 +1,5 @@
 3.10
+ * Fix NPE when using CQLSSTableWriter (CASSANDRA-12667)
  * Fix cassandra-stress graphing (CASSANDRA-12237)
  * Allow filtering on partition key columns for queries without secondary indexes (CASSANDRA-11031)
  * Fix Cassandra Stress reporting thread model and precision (CASSANDRA-12585)
